feat: migrate all routes
